--- a/css/style.css
+++ b/css/style.css
@@ -2,25 +2,142 @@
     margin: 0;
     padding: 0;
 }
-.container{
-    width: 100%;
-    height: 600px;
+
+@media (min-width: 1400px){
+    .container{
+        width: 100%;
+        height: 600px;
+        display: grid;
+        justify-content: center;
+        align-content: center;
+        grid-template-rows: 30px 144px 30px;
+        grid-template-columns: 656px;
+        background-color: lightgreen;
+    }
+
+    main{
+        display: grid;
+        grid-template-rows: repeat(3, 48px);
+        grid-template-columns: repeat(12, 1fr);
+    }
+    .colors0{
+        grid-column: 1 / span 4;
+    }
+    .colors1{
+        grid-column: 5 / span 4;
+    }
+    .colors2{
+        grid-column: 9 / span 4;
+    }
+    .colors3{
+        grid-column: 1 / span 4;
+    }
+    .colors4{
+        grid-column: 5 / span 4;
+    }
+    .colors5{
+        grid-column: 9 / span 4;
+    }
+    .colors6{
+        grid-column: 1 / span 3;
+    }
+    .colors7{
+        grid-column: 4 / span 3;
+    }
+    .colors8{
+        grid-column: 7 / span 3;
+    }
+    .colors9{
+        grid-column: 10 / span 3;
+    }
+}
+
+header, footer, div{
+    outline: 2px solid black;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: lightgreen;
 }
-.square{
-    display: block;
-    width: 30%;
-    height: 40%;
-    background-color: darkcyan;
-    margin: 20px;
+header{
+    background-color: #6aadc6;
+}
+footer{
+    background-color: #0070c2;
+}
+p{
+    font-size: 24px;
+    font-weight: 700;
+    text-align: center;
+    text-transform: uppercase;
+    color: #fcfcfc;
+}
+.colors0{
+    background-color: #f6ecf3;
+}
+.colors1{
+    background-color: #ebd9e7;
+}
+.colors2{
+    background-color: #dab3d0;
+}
+.colors3{
+    background-color: #c78db6;
+}
+.colors4{
+    background-color: #b3679f;
+}
+.colors5{
+    background-color: #a14286;
+}
+.colors6{
+    background-color: #e7ecf0;
+}
+.colors7{
+    background-color: #acbdcd;
+}
+.colors8{
+    background-color: #5d7e9d;
+}
+.colors9{
+    background-color: #0c406f;
 }
 
-@media (min-width: 540px) and (max-width: 1025px){
+
+@media (min-width: 992px) and (max-width: 1400px){
+
     .container{
+        width: 100%;
+        height: 600px;
+        display: grid;
         background-color: lightcoral;
-        flex-direction: column;
+        grid-template-rows: 30px 240px 30px;
+        grid-template-columns: 656px;
+        justify-content: center;
+        align-content: center;
+    }
+    main{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: repeat(5, 48px);
+    }
+
+}
+
+
+@media (max-width: 992px){
+    .container{
+        width: 100%;
+        height: 600px;
+        display: grid;
+        background-color: burlywood;
+        grid-template-rows: 30px 480px 30px;
+        grid-template-columns: 656px;
+        justify-content: center;
+        align-content: center;
+    }
+    main{
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: repeat(10, 48px);
     }
 }
