--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,31 @@
 *{
     margin: 0;
     padding: 0;
-}
+} /*Анульовую відступи що присвоєні рядковим і блочним тегам за замовчуванням*/
 
-@media (min-width: 1400px){
-    .container{
+@media (min-width: 1400px){ /*Задаю мінімальну ширину екрану для спрацьовування адаптивних властивостей
+    і все що пише в межах цього медіа-запиту відноситься тільки для екранів із шириною 1400 і більше пікселів*/
+
+    .container{ /*Тут використовую властивості Grid тому що вони дуже добре підходять для такого незвичного розташування елементів
+        і їхній плюс в тому що деякі властивості до елементів можна задавати через батьківський елемент а не напряму прописувати кожному*/
         width: 100%;
         height: 600px;
         display: grid;
         justify-content: center;
         align-content: center;
-        grid-template-rows: 30px 144px 30px;
-        grid-template-columns: 656px;
+        grid-template-rows: 30px 144px 30px; /*Тут зробив так щоб container ділився умовно на 3 рядки по порядку ( 30px 144px 30px )*/
+        grid-template-columns: 656px; /*тут задав одну колонку ( ширину області розміщення елементів у контейнері )*/
         background-color: lightgreen;
     }
 
-    main{
+    main{ /*тут влкстивості вже прописую для того щоб розмежувати на умовні лінії сам блок із адаптивними комірками*/
         display: grid;
-        grid-template-rows: repeat(3, 48px);
-        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: repeat(3, 48px);/*задаю 3 рядки по 48 px*/
+        grid-template-columns: repeat(12, 1fr);/*умовно розділяю блок з елементами на 12 колонок*/
     }
     .colors0{
-        grid-column: 1 / span 4;
+        grid-column: 1 / span 4; /*за допомогою цієї властивості говорю кожному елементу в яких межах вище створених умовних колонок
+        має розміщуватись кожен елемент ( 1 це перша колонка включно а span 4 це наступні колонки не включаючи останню*/
     }
     .colors1{
         grid-column: 5 / span 4;
@@ -50,7 +54,8 @@
     .colors9{
         grid-column: 10 / span 3;
     }
-}
+}/*тут закінчується перший медіа-запит, 
+а нище до наступного медіазапиту властивості що застосовуються для елементів постійно, незважаючи на медіа-запити ( якщо той їх не перекриває )*/
 
 header, footer, div{
     outline: 2px solid black;
@@ -102,7 +107,7 @@ p{
     background-color: #0c406f;
 }
 
-
+/*в кожному із наступних медіазапитів я просто міняю структуру їх розташувань і вже тут всюди розміри кожної з комірок блоку main є однакові*/
 @media (min-width: 992px) and (max-width: 1400px){
 
     .container{
